.badge gap issues fixed

--- a/dark.css
+++ b/dark.css
@@ -238,4 +238,5 @@ button:hover, a:hover {
 .badge {
     width: 20%;
     height: auto;
+    gap: 5%;
 }
